--- a/Orwelli_George.mw
+++ b/Orwelli_George.mw
@@ -1,14 +1,14 @@
 '''Orwelli George''' ('''George Orwell''') (kodanigunimi: Blairi Eric Arthur (Eric Arthur Blair)) (25. piimäkuu päiv 1903 – 21. vahtsõaastakuu päiv 1950) oll’ inglüse kiränik, esseist, aokiränik ja kriitik.
 
-Tää oll´ edimäne, kiä tarvit´ ütelüst ''külm sõda''.
+Tää oll' edimäne, kiä tarvit' ütelüst ''külm sõda''.
 
 ==Elokäük==
 
 Blairi Eric Arthur sündü 25. piimäkuu pääväl 1903 Indiahn Bihari provindsihn. Tä sai koolitusõ Etoni kollõdsihn (Eton College). Aastagast 1935 nakas’ Blairi Eric Arthur tarvitama kiränigunimme Orwelli George, mink võtt’ jyy perrä East Angliahn.
 
-18. hainakuu pääväl 1936 läts´ vallalõ Hispaania kodosõda. 15. joulukuu pääväl 1936 sõit’ Orwell umbõs 25-liikmõlidsõ inglüse rühmäga üten Katalooniahe ja ast’ 30. joulukuu pääväl Barcelonahn POUM-i (Ütine Marksistlik Tüülispartei) antifassistlikuhe miilitsähe. Ildampa Orwelli George varjas’ hinnäst Barcelonahn politsei iist ja 23. piimäkuu pääväl 1937 ynnahtu timäl üten tõõsõpoolõ O'Shaughnessy Eileeniga (Eileen O'Shaughnessy) üle piiri Prantsusmaalõ paedaq. Näist sündmüisist kirot’ tää uman dokumõntaaljutuhn "Kumardus Kataloonialõ" (inglüs. ''Homage to Catalonia''; 1938).
+18. hainakuu pääväl 1936 läts' vallalõ Hispaania kodosõda. 15. joulukuu pääväl 1936 sõit’ Orwell umbõs 25-liikmõlidsõ inglüse rühmäga üten Katalooniahe ja ast’ 30. joulukuu pääväl Barcelonahn POUM-i (Ütine Marksistlik Tüülispartei) antifassistlikuhe miilitsähe. Ildampa Orwelli George var'as’ hinnäst Barcelonahn politsei iist ja 23. piimäkuu pääväl 1937 ynnahtu timäl üten tõõsõpoolõ O'Shaughnessy Eileeniga (Eileen O'Shaughnessy) üle piiri Prantsusmaalõ paedaq. Naist sündmüisist kirot’ tää uman dokumõntaaljutuhn "Kumardus Kataloonialõ" (inglüs. ''Homage to Catalonia''; 1938).
 
-Tõõsõ ilmasya aol tiin’se tää Kodokaitsõhn ja tüüt’ BBC-hn. 1943 nakas’ tüühe aolehe ''Tribune'' toimõndusõhn, kirot’ poliitiga- ja kiränduskommõntaarõt.
+Tõõsõ ilmasya aol tiinse tää Kodokaitsõhn ja tüüt’ BBC-hn. 1943 nakas’ tüühe aolehe ''Tribune'' toimõndusõhn, kirot’ poliitiga- ja kiränduskommõntaarõ.
 
 Orwelli George kuuli tubõrkuluusi 1950. aastagal Londonin.
 
@@ -16,8 +16,8 @@ Orwelli George kuuli tubõrkuluusi 1950. aastagal Londonin.
 
 * "Birma pääväq" (1934)
 * "Kumardus Kataloonialõ" (1938)
-* "Eläjide talo" (1945) (romaan’, allegooria Nõvvokogoliido kotsilõ)
-* "1984" (1949) (düstoopia, „Eläjide talo“ ideeline jakkamine)
+* "Eläjide talo" (1945) (romaan, allegooria Nõvvokogoliido kotsilõ)
+* "1984" (1949) (düstoopia, „Eläjide talo“ ideeline jakkaminõ)
 
 [[en: George Orwell]]
 [[et: George Orwell]]
