*Empty MediaWiki Message*

--- a/Oulu_ülikuul.mw
+++ b/Oulu_ülikuul.mw
@@ -38,3 +38,6 @@ Oulu ülikoolin om kah Giellagas instituut ([[Põh'asaami kiil|saami keeli]] ''G
 
 *[http://www.oulu.fi/yliopisto/ Oulu ülikooli kodolehekülg]
 *[http://www.oulu.fi/giellagasinstituutti/ Giellagas instituut]
+
+[[Katõgooria:Oulu]]
+[[Katõgooria:Ülikooliq]]
