svg ([[Commons:Commons:GlobalReplace|GlobalReplace v0.3]])

--- a/Vietnam.mw
+++ b/Vietnam.mw
@@ -3,7 +3,7 @@ Nimi=Vietnam|
 Genitiiv=Vietnami|
 Lipp=Pilt:Flag of Vietnam.svg|
 Vapp=Pilt:Coat of arms of Vietnam.svg|
-Kaart=Pilt:LocationVietnam.png|
+Kaart=Pilt:Location0fVietnam.svg|
 Riigikiil=[[vietnami kiil]]|
 Pääliin=[[Hanoi]]|
 Suurus=331 690|
