better image quality and composition ([[Commons:Commons:GlobalReplace|GlobalReplace v0.3]])

--- a/Bolivari_Simon.mw
+++ b/Bolivari_Simon.mw
@@ -1,6 +1,6 @@
 {{Elokäük 
  | nimi = Bolivari Simon
- | pilt = Simón Bolívar 2.jpg
+ | pilt = Bolivar Arturo Michelena.jpg
  | sünnüaig = [[24. hainakuu päiv]] [[1783]]
  | sünnüpaik = Caracas, [[Venezuela]]
  | kuulmisaig = [[17. joulukuu päiv]] [[1830]] 
