--- a/Kivirähä_Andrus.mw
+++ b/Kivirähä_Andrus.mw
@@ -1,8 +1,8 @@
-'''Kivirähä Andrus''' (Andrus Kivirähk, sündünü 1970. aastaga põimukuu 17. Pääväl, om eesti kiränik. Tä lõpõt’ 1993. aastaga Tarto ülikooli aokirändüse osakunna. Andrus Kivirähk tüütäs Eesti Päävälehen, kohn tä kirotas arvamisõ artikliid. Tä tekk’ ka raadiosaadõt „Rahva uma kaidsõq“ sõbõr Mart Juurega üten.
+'''Kivirähä Andrus''' (Andrus Kivirähk, sündünüq 1970. aastaga põimukuu 17. Pääväl, om eesti kiränik. Tä lõpõt’ 1993. aastaga Tarto ülikooli aokirändüse osakunna. Andrus Kivirähk tüütäs Eesti Päävälehen, kohn tä kirotas arvamisartikliid. Tä tekk' ka raadiosaadõt „Rahva uma kaidsõq“ sõbõr Mart Juurõga üten.
 
-Andruse raamatut „Rehepapp ali Märdikuu“ om müüd inämb kuq 32 000 ja tuu tekk’ täst parhailladsõ ao eesti kõgõ populaarsõmba kirämehe. Kivirähä Andruse raamaduq 1ommaq kirotõduq inämbäste iistläisist, eesti aoluust ja mütoloogiast, aq tä om kirotanuq ka pall’o latsiraamatit, filmistsenaariumõ ja näütemänge. Kivirähä Andrusel om väegaq ummamuudu huumorimiil ja hüvä ettekujotus. Tä tarvitas sagõhe sõbralikku irooniat ja manopandmist.
+Andrusõ raamatut „Rehepapp ali Märdikuu“ om müüd inämb kuq 32 000 ja tuu tekk' täst parhailladsõ ao eesti kõgõ populaarsõmba kirämehe. Kivirähä Andrusõ raamaduq ommaq kirotõduq inämbäste iistläisist, eesti aoluust ja mütoloogiast, aq tä om kirotanuq ka pall'o latsiraamatit, filmistsenaariummõ ja näütemänge. Kivirähä Andrussõl om väegaq ummamuudu huumorimiil ja hüvä ettekujotus. Tä tarvitas sagõhe sõbralikku irooniat ja manopandmist.
 
-Tä om saanuq pall’o kirändüsavvohindu nii Eestin kuq ka vällämaal, näütüses Lutsu huumoripreemiä (1993), Tammsaare romaanipreemiä (2000), Viromaa kirändüsavvohind (2001, 2007), Nukitsa avvohind (2006, 2008, 2010), Läti Jaanis Baltvilksi preemiä (2011).
+Tä om saanuq pall'o kirändüsavvohindo nii Eestin kuq ka vällämaal, näütüses Lutsu huumoripreemiä (1993), Tammsaare romaanipreemiä (2000), Viromaa kirändüsavvohind (2001, 2007), Nukitsa avvohind (2006, 2008, 2010), Läti Jaanis Baltvilksi preemiä (2011).
 
 == Teosõq ==
 
@@ -14,11 +14,11 @@ Tä om saanuq pall’o kirändüsavvohindu nii Eestin kuq ka vällämaal, näüt
 „Pekri pipõrkuuk“ (1999)
 „Liblik“ (1999)
 „Sirli, Siim ja salahusõq“ (1999)
-„Rahva uma kaidsõq“ (Mart Juurega üten, 2000)
+„Rahva uma kaidsõq“ (Mart Juurõga üten, 2000)
 „Rehepapp ali Märdikuu“ (2000)
 „Sibulaq ja sokolaat“ (näütemängoq latsilõ, 2002)
 „Papagoidõ pääväq“ (näütemängoq, 2002)
-„Lotte reis lõunamaalõ“ (2002)
+„Lotte reis lõunõmaalõ“ (2002)
 „Romeo ja Julia“ (2003)
 „Vargamäe vanaq ja noorõq“ (2003)
 „Limpa ja mererüüvliq“ (2004)
@@ -36,4 +36,7 @@ Tä om saanuq pall’o kirändüsavvohindu nii Eestin kuq ka vällämaal, näüt
 „Vombat“ (näütemängoq, 2011)
 „Luuq“ (2012)
 „Maailma otsan“ (2013)
-„Kunna mus’o“ (2013)
+„Kunna mus'o“ (2013)
+
+[[katõgooria:Eesti inemiseq]]
+[[katõgooria:Eesti kiräniguq]]
