*Empty MediaWiki Message*

--- a/Serbiä.mw
+++ b/Serbiä.mw
@@ -11,7 +11,7 @@ Rahvaarv=7 498 001 (2008)|
 Internetitunnus=[[.rs]]
 }}
 
-'''Serbiä''', ammõtlidõlt '''Serbiä Vabariik''', om [[Õuruupa]] riik. Serbiä pääliin om [[Belgrad]].
+'''Serbiä''' (Србија), ammõtlidõlt '''Serbiä Vabariik''', om [[Õuruupa]] riik. Serbiä pääliin om [[Belgrad]].
 
 == Aolugu ==
 
