*Empty MediaWiki Message*

--- a/Reagani_Ronald.mw
+++ b/Reagani_Ronald.mw
@@ -1,6 +1,6 @@
 {{Elokäük 
  | nimi = Reagani Ronald
- | pilt = Official portrait of President Reagan 1981.jpg
+ | pilt = Official Portrait of President Reagan 1981.jpg
  | sünnüaig = 1911
  | sünnüpaik = 
  | kuulmisaig = 2004
