--- a/Kivirähä_Andrus.mw
+++ b/Kivirähä_Andrus.mw
@@ -1,4 +1,4 @@
-'''Kivirähä Andrus''' (Andrus Kivirähk, sündünüq 1970. aastaga põimukuu 17. Pääväl, om eesti kiränik. Tä lõpõt’ 1993. aastaga Tarto ülikooli aokirändüse osakunna. Andrus Kivirähk tüütäs Eesti Päävälehen, kohn tä kirotas arvamisartikliid. Tä tekk' ka raadiosaadõt „Rahva uma kaidsõq“ sõbõr Mart Juurõga üten.
+'''Kivirähä Andrus''' (Andrus Kivirähk), sündünüq 1970. aastaga põimukuu 17. pääväl, om eesti kiränik. Tä lõpõt’ 1993. aastaga Tarto ülikooli aokirändüse osakunna. Andrus Kivirähk tüütäs Eesti Päävälehen, kohn tä kirotas arvamisartikliid. Tä tekk' ka raadiosaadõt „Rahva uma kaidsõq“ sõbõr Mart Juurõga üten.
 
 Andrusõ raamatut „Rehepapp ali Märdikuu“ om müüd inämb kuq 32 000 ja tuu tekk' täst parhailladsõ ao eesti kõgõ populaarsõmba kirämehe. Kivirähä Andrusõ raamaduq ommaq kirotõduq inämbäste iistläisist, eesti aoluust ja mütoloogiast, aq tä om kirotanuq ka pall'o latsiraamatit, filmistsenaariummõ ja näütemänge. Kivirähä Andrussõl om väegaq ummamuudu huumorimiil ja hüvä ettekujotus. Tä tarvitas sagõhe sõbralikku irooniat ja manopandmist.
 
@@ -6,37 +6,38 @@ Tä om saanuq pall'o kirändüsavvohindo nii Eestin kuq ka vällämaal, näütü
 
 == Teosõq ==
 
-„Ivan Orava mälehtüseq ali Minnevaig kuq hellesinidseq mäeq“ (1995)
-„Kaalkiräk“ (1995)
-„Ollõ kõrvalõ“ (1996)
-„Kalõvipoig“ (1997)
-„Vanameheq säitsmendält. Jalotuskäük vikahtkaari pääl“ (näutemängoq, 1997)
-„Pekri pipõrkuuk“ (1999)
-„Liblik“ (1999)
-„Sirli, Siim ja salahusõq“ (1999)
-„Rahva uma kaidsõq“ (Mart Juurõga üten, 2000)
-„Rehepapp ali Märdikuu“ (2000)
-„Sibulaq ja sokolaat“ (näütemängoq latsilõ, 2002)
-„Papagoidõ pääväq“ (näütemängoq, 2002)
-„Lotte reis lõunõmaalõ“ (2002)
-„Romeo ja Julia“ (2003)
-„Vargamäe vanaq ja noorõq“ (2003)
-„Limpa ja mererüüvliq“ (2004)
-„Vargamäe vanaq ja noorõq lääväq Õuruupahe“ (2004)
-„Wremja. Timur ja timä miiskund“ (Mart Juurega üten, 2004)
-„Wremja. Zorro märk“ (Mart Juurega üten, 2004)
-„Jutuq“ (2005)
-„Vargamäe vanaq ja noorõq tembotasõq jälqkiq“ (2005)
-„Aabidsa kikas“ (näütemängoq, 2006)
-„Vällälöüdjidekülä Lotte“ (2006)
-„Miis, kiä tiid hussisõnno“ (2007)
-„Voldemar“ (näütemängoq, 2008)
-„Kaka ja kevväi“ (2009)
-„Jumala luuq“ (2009)
-„Vombat“ (näütemängoq, 2011)
-„Luuq“ (2012)
-„Maailma otsan“ (2013)
-„Kunna mus'o“ (2013)
+* „Ivan Orava mälehtüseq ali Minnevaig kuq hellesinidseq mäeq“ (1995)
+* „Kaalkiräk“ (1995)
+* „Ollõ kõrvalõ“ (1996)
+* „Kalõvipoig“ (1997)
+* 
+* „Vanameheq säitsmendält. Jalotuskäük vikahtkaari pääl“ (näutemängoq, 1997)
+* „Pekri pipõrkuuk“ (1999)
+* „Liblik“ (1999)
+* „Sirli, Siim ja salahusõq“ (1999)
+* „Rahva uma kaidsõq“ (Mart Juurõga üten, 2000)
+* „Rehepapp ali Märdikuu“ (2000)
+* „Sibulaq ja sokolaat“ (näütemängoq latsilõ, 2002)
+* „Papagoidõ pääväq“ (näütemängoq, 2002)
+* „Lotte reis lõunõmaalõ“ (2002)
+* „Romeo ja Julia“ (2003)
+* „Vargamäe vanaq ja noorõq“ (2003)
+* „Limpa ja mererüüvliq“ (2004)
+* „Vargamäe vanaq ja noorõq lääväq Õuruupahe“ (2004)
+* „Wremja. Timur ja timä miiskund“ (Mart Juurega üten, 2004)
+* „Wremja. Zorro märk“ (Mart Juurega üten, 2004)
+* „Jutuq“ (2005)
+* „Vargamäe vanaq ja noorõq tembotasõq jälqkiq“ (2005)
+* „Aabidsa kikas“ (näütemängoq, 2006)
+* „Vällälöüdjidekülä Lotte“ (2006)
+* „Miis, kiä tiid hussisõnno“ (2007)
+* „Voldemar“ (näütemängoq, 2008)
+* „Kaka ja kevväi“ (2009)
+* „Jumala luuq“ (2009)
+* „Vombat“ (näütemängoq, 2011)
+* „Luuq“ (2012)
+* „Maailma otsan“ (2013)
+* „Kunna mus'o“ (2013)
 
 [[katõgooria:Eesti inemiseq]]
 [[katõgooria:Eesti kiräniguq]]
