--- a/Reagani_Ronald.mw
+++ b/Reagani_Ronald.mw
@@ -7,6 +7,6 @@
  | kuulmispaik = 
  | matmispaik = 
  }}
-'''Reagani Ronald''' ('''Ronald Wilson Reagan''', sündünü 1911-2004) oll' [[Ameeriga Ütisriigiq|Ameeriga Ütisriike]] 40. president aastagil 1981-1989 ja [[California]]õ 33. kubõrnõr aastagil 1967-1975.
+'''Reagani Ronald''' ('''Ronald Wilson Reagan''', sündünüq 1911-2004) oll' [[Ameeriga Ütisriigiq|Ameeriga Ütisriike]] 40. president aastagil 1981-1989 ja [[California]] 33. kubõrnõr aastagil 1967-1975.
 
 [[Katõgooria:Ameeriga Ütisriike presidendiq]]
