--- a/Trojany.mw
+++ b/Trojany.mw
@@ -1,4 +1,4 @@
-'''Trojany''' om külä Lõunahummogu-[[Poola]]n. Trojany in elli 2014. aastagal 490 inemist.
+'''Trojany''' om külä Lõunahummogu-[[Poola]]n. Trojanyn elli 2014. aastagal 490 inemist.
 
 [[Katõgooria:Poola küläq]]
 
