*Empty MediaWiki Message*

--- a/Murakami_Haruki.mw
+++ b/Murakami_Haruki.mw
@@ -21,3 +21,5 @@ Murakami Haruki pand´ ümbre pall´o Fitzgeraldi Francis Scotti, Capote Trumani
 [[en: Haruki Murakami]]
 [[et: Haruki Murakami]]
 [[ru: Мураками, Харуки]]
+
+[[katõgooria:Jaapani kiräniguq]]
