*Empty MediaWiki Message*

--- a/Lana_Del_Rey.mw
+++ b/Lana_Del_Rey.mw
@@ -7,6 +7,8 @@ Lana Del Rey muusikat om võrrõld filmimuusiga ja popkultuuriga, esiqeränis 19
 4. vahtsõaastakuu pääväl 2012. aastagal ilmu uudis, et Lana Del Rey om sõlm´nuq lepingu modelliagentuuri NEXT Model Managementiga. Lana oll´ mitmõ H&M-i moodukorjusõ reklaamnäos.
 Lana Del Rey tüü om saanuq mitmit avvohindo. Tä om võitnuq muusigaavvohinna Q Award rubriigin kõgõ parõmb vahtsõnõ asi ja miihi aokirä GQ avvohinna rubriigin aastaga naanõ.
 
+[[katõgooria:Ameeriga Ütisriike lauljaq]]
+
 [[en: Lana Del Rey]]
 [[et: Lana Del Rey]]
 [[ru: Лана Дель Рей]]
