--- a/Lana_Del_Rey.mw
+++ b/Lana_Del_Rey.mw
@@ -1,3 +1,13 @@
+{{Elokäük 
+ | nimi = Woolridge Granti Elizabeth
+ | pilt = Official Portrait of President Reagan 1981.jpg
+ | sünnüaig = 1986
+ | sünnüpaik = 
+ | kuulmisaig = 
+ | kuulmispaik = 
+ | matmispaik = 
+ }}
+
 '''Woolridge Granti Elizabeth''' (Elizabeth Woolridge Grant) (21. piimäkuu päiv 1986), tuntuq ku '''Lana Del Rey''', om [[Ameeriga Ütisriigiq|Ameeriga Ütisriike]] laulja ni laulusõnno kirotaja. 18-aastagadsõlt nakas' Elizabeth laulõ kirotama ja sõlmsõ uma edimädse plaadilepingu 2007. aastagal. Timä edimäne plaat „Lana Del Rey“ ilmu 2010. aastagal Internetin.
 
 Pääle tuud, ku Lana Del Rey and' 2011. aastaga piimäkuun vällä laulu „Video Games“, ilmu põimukuun YouTube’in timä puult tett muusigavideo. Timä tõnõ plaat' „Born To Die“ ilmu 2012. aastaga vahtsõaastakuun. Tuud plaati om müüd üle 5 mill'ona eksemplari kogo maailman.
