*Empty MediaWiki Message*

--- a/Lana_Del_Rey.mw
+++ b/Lana_Del_Rey.mw
@@ -1,6 +1,6 @@
 {{Elokäük 
  | nimi = Woolridge Granti Elizabeth
- | pilt = Official Portrait of President Reagan 1981.jpg
+ | pilt = Lana Del Ray at the Echo music award 2013.jpg
  | sünnüaig = 1986
  | sünnüpaik = 
  | kuulmisaig = 
