*Empty MediaWiki Message*

--- a/Lana_Del_Rey.mw
+++ b/Lana_Del_Rey.mw
@@ -2,7 +2,7 @@
  | nimi = Woolridge Granti Elizabeth
  | pilt = Lana Del Ray at the Echo music award 2013.jpg
  | sünnüaig = 1986
- | sünnüpaik = 
+ | sünnüpaik = [[New York|New Yorkin]]
  | kuulmisaig = 
  | kuulmispaik = 
  | matmispaik = 
