*Empty MediaWiki Message*

--- a/Murakami_Haruki.mw
+++ b/Murakami_Haruki.mw
@@ -1,3 +1,13 @@
+{{Elokäük 
+ | nimi = Murakami Haruki
+ | pilt = Lana Del Ray at the Echo music award 2013.jpg
+ | sünnüaig = 1949
+ | sünnüpaik = [[Kioto]]n
+ | kuulmisaig = 
+ | kuulmispaik = 
+ | matmispaik = 
+ }}
+
 '''Murakami Haruki''' (12. vahtsõaastaku päiv 1949) om jaapani kiränik ja tõlk. Murakami Haruki sündü Kiotohn. Timä esä oll’ klassigalidsõ filoloogia oppaja.
 
 1971. aastagal kosõ tää umma klassisõsarõ Yoko; nääq ommaq siiäqmaaniq ütehn, a latsi olõ-i. Kiränik tüüt´ plaadipoodihn ja pidi 1974-1981 Tokyohn jatsukohvikut. 
