--- a/Murakami_Haruki.mw
+++ b/Murakami_Haruki.mw
@@ -1,6 +1,6 @@
 {{Elokäük 
  | nimi = Murakami Haruki
- | pilt = Lana Del Ray at the Echo music award 2013.jpg
+ | pilt = HarukiMurakami.png
  | sünnüaig = 1949
  | sünnüpaik = [[Kioto]]n
  | kuulmisaig = 
@@ -8,28 +8,30 @@
  | matmispaik = 
  }}
 
-'''Murakami Haruki''' (12. vahtsõaastaku päiv 1949) om jaapani kiränik ja tõlk. Murakami Haruki sündü Kiotohn. Timä esä oll’ klassigalidsõ filoloogia oppaja.
+'''Murakami Haruki''' (Haruki Murakami, sündünüq 12. vahtsõaastakuu pääväl 1949) om [[Jaapan|jaapani]] kiränik ja tõlk. Murakami Haruki sündü Kiotohn. Timä esä oll' klassigalidsõ filoloogia oppaja.
 
-1971. aastagal kosõ tää umma klassisõsarõ Yoko; nääq ommaq siiäqmaaniq ütehn, a latsi olõ-i. Kiränik tüüt´ plaadipoodihn ja pidi 1974-1981 Tokyohn jatsukohvikut. 
-Murakami edüsromaan´ „Kullõq tuulõ laulu“ ilmu 1979. aastagal. Tundsas sai Murakami 1987. aastagal ilmunuq romaaniga „Norra mõts“.
+1971. aastagal kosõ tää umma klassisõsarõ Yoko; nääq ommaq siiäqmaaniq ütehn, a latsi olõ-i. Kiränik tüüt' plaadipoodihn ja pidi 1974-1981 [[Tokyo]]hn jatsukohvikut. 
 
-Murakami Haruki reis´ pall´o. 1986. aastagal sõit´ tää uma naasõga Itaaliahe, ildampa Kriikahe. 1987. aastagal läts´ tä Inglüsmaalõ, Londonihe. 1991. aastagal läts´ kiränik Ameeriga Ütisriikehe ja nakas´ tüütämä sääl ülikoolihn Princetoni liinahn. Vahtsõaastakuul 2001. aastagal läts´ kiränik tagasi Jaapanihe, kohn põraaigo eläs.
-Aastagal 2002 ilmu timä kümnes romaan´ „Kafka mereveerehn“. 2006. aastagal Murakami Haruki sai Franz Kafka nimelidse kirändüspreemia.
+Murakami edüsromaan „Kullõq tuulõ laulu“ ilmu 1979. aastagal. Tundsas sai Murakami 1987. aastagal ilmunuq romaaniga „Norra mõts“.
 
-Murakami Haruki pand´ ümbre pall´o Fitzgeraldi Francis Scotti, Capote Trumani ja Salingeri Jerome’i teossit.
+Murakami Haruki reis pall'o. 1986. aastagal sõit' tää uma naasõga Itaaliahe, ildampa Kreekahe. 1987. aastagal läts' tä Inglüsmaalõ, Londonihe. 1991. aastagal läts' kiränik Ameeriga Ütisriikehe ja nakas' tüütämä sääl ülikoolihn Princetoni liinahn. 
+
+Vahtsõaastakuul 2001. aastagal läts' kiränik tagasi Jaapanihe, kohn põraaigo eläs. Aastagal 2002 ilmu timä kümnes romaan „Kafka mereveerehn“. 2006. aastagal Murakami Haruki sai Franz Kafka nimelidse kirändüspreemia.
+
+Murakami Haruki om pandnuq ümbre pall'o Fitzgeraldi Francis Scotti, Capote Trumani ja Salingeri Jerome’i teossit.
 
 ==Teossõq==
 
 * „Kuulõq tuulõ laulu“ (1979)
 * „Norra mõts“ (1987)
 * „Dance, dance, dance“ (1988)
-* „Lõuna puul’ piiri, õdagu puul’ päivlikku“ (1992)
+* „Lõuna puul piiri, õdagu puul päivlikku“ (1992)
 * „Muq kullakõnõ sputnik“ (1999)
 * „Kafka mereveerehn“ (2002)
 * „1Q84“ (2009, 2010)
 
+[[katõgooria:Jaapani kiräniguq]]
+
 [[en: Haruki Murakami]]
 [[et: Haruki Murakami]]
 [[ru: Мураками, Харуки]]
-
-[[katõgooria:Jaapani kiräniguq]]
