*Empty MediaWiki Message*

--- a/Murakami_Haruki.mw
+++ b/Murakami_Haruki.mw
@@ -1,5 +1,5 @@
 {{Elokäük 
- | nimi = Murakami Haruki
+ | nimi = Murakami Haruki<br>村上&emsp;春樹
  | pilt = HarukiMurakami.png
  | sünnüaig = 1949
  | sünnüpaik = [[Kioto]]n
