*Empty MediaWiki Message*

--- a/Tšuvašimaa.mw
+++ b/Tšuvašimaa.mw
@@ -2,6 +2,8 @@
 
 Suurõmbaq liinaq ommaq Tšeboksarõ, Novotšeboksarsk, Kanaš ja Alatõr.
 
+==Valitsõmisjaotus==
+
 Vabariigi kuunsaison ommaq järgmädseq rajooniq:
 
 Alatõri rajoon (Алатырский район)
