*Empty MediaWiki Message*

--- a/Tšuvašimaa.mw
+++ b/Tšuvašimaa.mw
@@ -1,4 +1,4 @@
-'''Tšuvašimaa''' vai '''Tšuvaššia'' (vinne Чувашская Республика–Чувашия) om [[Vinnemaa]] 1. järgu valitsõmisütsüs (vabariik) Volga föderaalringkunnan. Tšuvašimaa päälinn om [[Tšeboksarõ]].
+''Tšuvašimaa''' vai '''Tšuvaššia'' (vinne Чувашская Республика–Чувашия) om [[Vinnemaa]] 1. järgu valitsõmisütsüs (vabariik) Volga föderaalringkunnan. Tšuvašimaa päälinn om [[Tšeboksarõ]].
 
 Suurõmbaq liinaq ommaq Tšeboksarõ, Novotšeboksarsk, Kanaš ja Alatõr.
 
