*Empty MediaWiki Message*

--- a/Tšuvašimaa.mw
+++ b/Tšuvašimaa.mw
@@ -1,4 +1,17 @@
-'''Tšuvašimaa''' vai '''Tšuvaššia''' (tšuvaši k. ''Чăваш Республики'', vinne k. ''Чувашская Республика–Чувашия'') om [[Vinnemaa]] 1. järgu valitsõmisütsüs (vabariik) Volga föderaalringkunnan. Tšuvašimaa päälinn om [[Tšeboksarõ]].
+{{MaaInfokast|
+Nimi=Tšuvaši Vabariik<br />Чăваш Республики<br />Чувашская Республика|
+Genitiiv=Tšuvaši Vabariigi|
+Lipp=Image:Flag of Chuvashia.svg|150px|
+Vapp=Image:Coat of Arms of Republic of Chuvashia.svg|125px|
+Kaart=File:Karelia today.png|150px|
+Riigikiil=[[tšuvaši kiil]], [[vinne kiil]]|
+Pääliin=[[Tšeboksarõ]]|
+Suurus={{formatnum:18 346}}|
+Rahvaarv={{formatnum:684212}} (2010)|
+Internetitunnus=[[.ru]]
+}}
+
+'''Tšuvašimaa''' vai '''Tšuvaššia''' (ammõtligult '''Tšuvaši Vabariik''', tšuvaši k. ''Чăваш Республики'', vinne k. ''Чувашская Республика'') om [[Vinnemaa]] 1. järgu valitsõmisütsüs (vabariik) Volga föderaalringkunnan. Tšuvašimaa päälinn om [[Tšeboksarõ]].
 
 Suurõmbaq liinaq ommaq Tšeboksarõ, Novotšeboksarsk, Kanaš ja Alatõr.
 
