*Empty MediaWiki Message*

--- a/Tšuvašimaa.mw
+++ b/Tšuvašimaa.mw
@@ -1,8 +1,8 @@
 {{MaaInfokast|
-Nimi=Tšuvaši Vabariik<br />Чăваш Республики<br />Чувашская Республика|
+Nimi=Tšuvaši Vabariik<br />Чăваш Республики — Чăваш Ен<br />Чувашская Республика — Чувашия|
 Genitiiv=Tšuvaši Vabariigi|
 Lipp=Image:Flag of Chuvashia.svg|150px|
-Vapp=Image:Coat of Arms of Republic of Chuvashia.svg|125px|
+Vapp=Image:Coat of Arms of Chuvashia.svg|125px|
 Kaart=File:Karelia today.png|150px|
 Riigikiil=[[tšuvaši kiil]], [[vinne kiil]]|
 Pääliin=[[Tšeboksarõ]]|
