*Empty MediaWiki Message*

--- a/Tšuvašimaa.mw
+++ b/Tšuvašimaa.mw
@@ -3,11 +3,11 @@ Nimi=Tšuvaši Vabariik<br />Чăваш Республики — Чăваш Ен
 Genitiiv=Tšuvaši Vabariigi|
 Lipp=Image:Flag of Chuvashia.svg|150px|
 Vapp=Image:Coat of Arms of Chuvashia.svg|125px|
-Kaart=File:Karelia today.png|150px|
+Kaart=File:Chuvash in Russia.svg|150px|
 Riigikiil=[[tšuvaši kiil]], [[vinne kiil]]|
 Pääliin=[[Tšeboksarõ]]|
 Suurus={{formatnum:18 346}}|
-Rahvaarv={{formatnum:684212}} (2010)|
+Rahvaarv={{formatnum:1251619}} (2010)|
 Internetitunnus=[[.ru]]
 }}
 
