*Empty MediaWiki Message*

--- a/Näüdüs:MaaInfokast.mw
+++ b/Näüdüs:MaaInfokast.mw
@@ -23,9 +23,9 @@
 |- 
 | '''Rahvaarv'''
 | {{{Rahvaarv}}}
-|- 
-| '''Raha'''
-| {{{Raha}}}
+%|- 
+%| '''Raha'''
+%| {{{Raha}}}
 |- 
 | '''Internetitunnus'''
 | {{{Internetitunnus}}}
