*Empty MediaWiki Message*

--- a/Õuruupa_Liit.mw
+++ b/Õuruupa_Liit.mw
@@ -3,7 +3,7 @@
 |-
 | align="center" colspan="2" style="background:#f9f9f9;" | [[Pilt:Flag_of_Europe.svg|250px|]]
 |-
-| align="center" colspan="2" style="background:#f9f9f9;" | [[Pilt:EU location.png|280px|]]
+| align="center" colspan="2" style="background:#f9f9f9;" | [[Pilt:Global_European_Union.svg|280px|]]
 |- 
 | align="center" colspan="2" | 
 |-
