*Empty MediaWiki Message*

--- a/Baskimaa.mw
+++ b/Baskimaa.mw
@@ -1,3 +1,16 @@
+{{MaaInfokast|
+Nimi=Baskimaa<br />Чăваш Республики — Чăваш Ен<br />Чувашская Республика — Чувашия|
+Genitiiv=Tšuvaši Vabariigi|
+Lipp=Image:Flag of Chuvashia.svg|150px|
+Vapp=Image:Coat of Arms of Chuvashia.svg|125px|
+Kaart=File:Chuvash in Russia.svg|200px|
+Riigikiil=[[tšuvaši kiil]], [[vinne kiil]]|
+Pääliin=[[Tšeboksarõ]]|
+Suurus={{formatnum:18 346}}|
+Rahvaarv={{formatnum:1251619}} (2010)|
+Internetitunnus=[[.ru]]
+}}
+
 Baskimaa om piirkund Pürenee mäki õdagujaon, miä küünüs Biskaia laheni katõl puul Pürenee mäki õdagujako Prantsusmaal ja Hispaanian. Baskimaa sais kuun säitsmest piirkunnast, nn aoluulidsõst alast. Neli piirkunda lõunan, Hispaania territooriumil ommaq kokko Hegoalde ehk Lõunõ-Baskimaa ni kolm piirkunda põh'ahummogun, Prantsusmaa territooriumil ommaq kokko Iparraide ehk Põh'a-Baskimaa.
 
 Lõunõ-Baskimaa piirkunnaq:
@@ -20,6 +33,8 @@ Baskimaa ommaq inemiseq elänüq kõik aig illatsõst paleoliitikumist pääle.
 Tekkü Navarra kuningkund, miä liit' baskõ maid mõlõmbal puul Püreneid umbõs aastagil 805–1200. Suurõmba võimsuse sai taa Sancho III Suurõ aol 985–1035. Tuul aol olliq Aragón ja Kastiilia Navarra maakunnaq ni Sancho sai protektoraadi ka Leóni üle. Peräst Sancho surma jaeti riik timä poigõ vaihõl, kiä pästiq vallalõ veletaposõa. 1157. aastagal kuuli Navarra kuningadünastia vällä.
 
 1512 võtt' Aragóni kuning Fernando II ärq Baskimaa lõunõjao. 1520 võtt' Prantsusmaa põh’ajao. Põh’ajago jäi Prantsusmaaga personaaluniuuni kooniq 1589. aastagani, ku Navarra kuning Henri IV perisi Prantsusmaa trooni.
+
+{{ÕuruupaMaaq}}
 
 [[katõgooria:Baskimaa]]
 [[katõgooria:Hispaania]]
