*Empty MediaWiki Message*

--- a/Baskimaa.mw
+++ b/Baskimaa.mw
@@ -1,13 +1,13 @@
 {{MaaInfokast|
 Nimi=Baskimaa<br />Чăваш Республики — Чăваш Ен<br />Чувашская Республика — Чувашия|
 Genitiiv=Tšuvaši Vabariigi|
-Lipp=Image:Flag of Chuvashia.svg|150px|
-Vapp=Image:Coat of Arms of Chuvashia.svg|125px|
-Kaart=File:Chuvash in Russia.svg|200px|
+Lipp=Image:Flag of the Basque Country.svg|150px|
+Vapp=Image:Coat of Arms of the Basque Country.svg|125px|
+Kaart=File:Localización de la CA de Euskadi (NUTS ES1).png|200px|
 Riigikiil=[[tšuvaši kiil]], [[vinne kiil]]|
 Pääliin=[[Tšeboksarõ]]|
-Suurus={{formatnum:18 346}}|
-Rahvaarv={{formatnum:1251619}} (2010)|
+Suurus={{formatnum:7234}}|
+Rahvaarv={{formatnum:2155546}}|
 Internetitunnus=[[.ru]]
 }}
 
