*Empty MediaWiki Message*

--- a/Baskimaa.mw
+++ b/Baskimaa.mw
@@ -1,6 +1,6 @@
 {{MaaInfokast|
-Nimi=Baskimaa<br />Чăваш Республики — Чăваш Ен<br />Чувашская Республика — Чувашия|
-Genitiiv=Tšuvaši Vabariigi|
+Nimi=Baskimaa<br />Euskadi<br />Чувашская Республика — Чувашия|
+Genitiiv=Baskimaa|
 Lipp=Image:Flag of the Basque Country.svg|150px|
 Vapp=Image:Coat of Arms of the Basque Country.svg|125px|
 Kaart=File:Localización de la CA de Euskadi (NUTS ES1).png|200px|
