--- a/Baskimaa.mw
+++ b/Baskimaa.mw
@@ -1,5 +1,5 @@
 {{MaaInfokast|
-Nimi=Baskimaa<br />Euskadi<br />Чувашская Республика — Чувашия|
+Nimi=Baskimaa<br />Euskadi<br 
 Genitiiv=Baskimaa|
 Lipp=Image:Flag of the Basque Country.svg|150px|
 Vapp=Image:Coat of Arms of the Basque Country.svg|125px|
