*Empty MediaWiki Message*

--- a/Baskimaa.mw
+++ b/Baskimaa.mw
@@ -4,7 +4,7 @@ Genitiiv=Baskimaa|
 Lipp=Image:Flag of the Basque Country.svg|150px|
 Vapp=Image:Coat of Arms of the Basque Country.svg|125px|
 Kaart=File:Localización de la CA de Euskadi (NUTS ES1).png|200px|
-Riigikiil=[[tšuvaši kiil]], [[vinne kiil]]|
+Riigikiil=[[baski kiil]], [[hispaania kiil]], [[prantsusõ kiil]]|
 Pääliin=[[Tšeboksarõ]]|
 Suurus={{formatnum:7234}}|
 Rahvaarv={{formatnum:2155546}}|
