*Empty MediaWiki Message*

--- a/Baskimaa.mw
+++ b/Baskimaa.mw
@@ -1,6 +1,6 @@
 {{MaaInfokast|
-Nimi=Baskimaa<br />Euskadi<br 
-Genitiiv=Baskimaa|
+Nimi=Baskimaa<br/>Euskadi<br 
+Genitiiv=Baskimaa
 Lipp=Image:Flag of the Basque Country.svg|150px|
 Vapp=Image:Coat of Arms of the Basque Country.svg|125px|
 Kaart=File:Localización de la CA de Euskadi (NUTS ES1).png|200px|
