--- a/Baskimaa.mw
+++ b/Baskimaa.mw
@@ -28,7 +28,7 @@ Tõõnõkõrd rehkendedäseq Navarra ja Alamb-Navarra ütes piirkunnas.
 
 ==Aolugu==
 
-Baskimaa ommaq inemiseq elänüq kõik aig illatsõst paleoliitikumist pääle. 
+Baskimaal ommaq inemiseq elänüq kõik aig illatsõst paleoliitikumist pääle. 
 3. aastagasaal sai Baskimaa hindäperi riigis ja pidi vasta hummoguguutõ rünnäkile. Baskimaal tegünüq hertsogkund oll' vaihõpääl frangõst  ja Akvitaaniast  vasallsõltuvusõn. Araablaisi vallutusõ aol vallut' hertsogkunna Karl Martell. Tuust aost om peri "Rolandi laul". Rolandi väesalga häödiki periselt ärq baskiq.
 Tekkü Navarra kuningkund, miä liit' baskõ maid mõlõmbal puul Püreneid umbõs aastagil 805–1200. Suurõmba võimsuse sai taa Sancho III Suurõ aol 985–1035. Tuul aol olliq Aragón ja Kastiilia Navarra maakunnaq ni Sancho sai protektoraadi ka Leóni üle. Peräst Sancho surma jaeti riik timä poigõ vaihõl, kiä pästiq vallalõ veletaposõa. 1157. aastagal kuuli Navarra kuningadünastia vällä.
 
