--- a/Baskimaa.mw
+++ b/Baskimaa.mw
@@ -1,15 +1,7 @@
-{{MaaInfokast|
-Nimi=Baskimaa<br/>Euskadi<br 
-Genitiiv=Baskimaa
-Lipp=Image:Flag of the Basque Country.svg|150px|
-Vapp=Image:Coat of Arms of the Basque Country.svg|125px|
-Kaart=File:Localización de la CA de Euskadi (NUTS ES1).png|200px|
-Riigikiil=[[baski kiil]], [[hispaania kiil]], [[prantsusõ kiil]]|
-Pääliin=[[Tšeboksarõ]]|
-Suurus={{formatnum:7234}}|
-Rahvaarv={{formatnum:2155546}}|
-Internetitunnus=[[.ru]]
-}}
+
+[[Image:Flag of the Basque Country.svg|150px]]
+[[Image:Coat of Arms of the Basque Country.svg|125px]]
+[[File:Localización de la CA de Euskadi (NUTS ES1).png|200px]]
 
 Baskimaa om piirkund Pürenee mäki õdagujaon, miä küünüs Biskaia laheni katõl puul Pürenee mäki õdagujako Prantsusmaal ja Hispaanian. Baskimaa sais kuun säitsmest piirkunnast, nn aoluulidsõst alast. Neli piirkunda lõunan, Hispaania territooriumil ommaq kokko Hegoalde ehk Lõunõ-Baskimaa ni kolm piirkunda põh'ahummogun, Prantsusmaa territooriumil ommaq kokko Iparraide ehk Põh'a-Baskimaa.
 
