*Empty MediaWiki Message*

--- a/Baskimaa.mw
+++ b/Baskimaa.mw
@@ -1,7 +1,6 @@
 
-[[Image:Flag of the Basque Country.svg|150px]]
-[[Image:Coat of Arms of the Basque Country.svg|125px]]
-[[File:Localización de la CA de Euskadi (NUTS ES1).png|200px]]
+[[Image:Flag of the Basque Country.svg|right|thumb|150px|Baskimaa lipp]]
+[[File:Localización de la CA de Euskadi (NUTS ES1).png|200px|thumb|right|Baskimaa kotus kaardi pääl]]
 
 Baskimaa om piirkund Pürenee mäki õdagujaon, miä küünüs Biskaia laheni katõl puul Pürenee mäki õdagujako Prantsusmaal ja Hispaanian. Baskimaa sais kuun säitsmest piirkunnast, nn aoluulidsõst alast. Neli piirkunda lõunan, Hispaania territooriumil ommaq kokko Hegoalde ehk Lõunõ-Baskimaa ni kolm piirkunda põh'ahummogun, Prantsusmaa territooriumil ommaq kokko Iparraide ehk Põh'a-Baskimaa.
 
