--- a/Wikipedia:Pääleht.mw
+++ b/Wikipedia:Pääleht.mw
@@ -55,7 +55,6 @@ break=no
 
 </div>
 | align="left" colspan="2" valign="top" style="border-width: 1px; border-color:#FFD700; border-style: solid; background:#D1EEEE; padding: 8px" | <center>'''Abis vahtsõlõ pruukjalõ'''</center>
-*'''[[Wikipedia:Artiklivõistlus (2013) vro|Võrokeeline artiklivõistlus 2013]]'''
 *[[Wikipedia:Vikipeediä tutvustus|Vikipeediä tutvustus]]
 *[[Wikipedia:Vikipeediä säädüseq|Vikipeediä säädüseq]]
 *[[Lühkü pruukmisoppus|Pruukmisoppus]]
@@ -65,7 +64,8 @@ break=no
 *[[Wikipedia:Miä Vikipeediä olõ-i|Miä Vikipeediä olõ-i]]
 *[http://synaq.org Võro-eesti sõnaraamat Internetin]
 *[http://math.ut.ee/~vlaan/vtk/vtk.html Võrokeelidse tarkvara kodolehekülg]
-*[http://umakiil.eu Üts riik - kats kiilt. Võro keele kavvõstopmisprogramm ja võrgoväreht]
+*[[Wikipedia:Artiklivõistlus (2013) vro|Võrokeeline artiklivõistlus 2013]]
+!<--*[http://umakiil.eu Üts riik - kats kiilt. Võro keele kavvõstopmisprogramm ja võrgoväreht]-->
 |-
 | align="left" colspan="2" valign="top" style="border-width: 1px; border-color: #C1CDC1; border-style: solid; background:#BFEFFF; padding: 8px" class="plainlinks" | <center>'''Wikimedia tegemiseq'''</center>
 *[http://translatewiki.net/w/i.php?title=Main_Page&setlang=fiu-vro Vikikeskkunna ümbrepandminõ võro kiilde]
