--- a/Kotonkoolitus.mw
+++ b/Kotonkoolitus.mw
@@ -15,7 +15,7 @@ Riigivõimu suhtumist om mitmasugust. Näütüses
  
 Eesti säädüseq kotonkoolitusõ kotsilõ ommaq kimmide hulgast.
 
-[[Roodsi]]n, [[S'aksamaa]]l, [[Türgü]]n ja [Hispaania]]n om kotonkoolitus keelet. 2003. aastagal oll' S'aksamaal umbõs 500 last varguisi kotonoppusõl.
+[[Roodsi]]n, [[S'aksamaa]]l, [[Türgü]]n ja [[Hispaania]]n om kotonkoolitus keelet. 2003. aastagal oll' S'aksamaal umbõs 500 last varguisi kotonoppusõl.
 
 '''Kotonkoolitusõ viise''' om väega mitmit. Tetäs võimaligult üldharidusõ iinkujo perrä vai hoobis errämuudu. USA algkoolioppaja '''John Holt''' (1923-1985) iistvõtmisõl om edendet "ilma koolilda kasvatamist", kon ei olõq tunniplaani, latsõq mängväq umavahel ja suuri inemiisiga, tegeväq suuriga üten mitamsugumaidsi töid, nägeväq TV-d, tiatrit jne.
 Kotonoppusõ jaos ommaq mitmasugumadsõq seldsiq, kotonkoolitajidõ ütistüq, nõvvoandmisfirmaq, kavvõstopminõ, e-kooliq jne.  
