*Empty MediaWiki Message*

--- a/Kivirähä_Andrus.mw
+++ b/Kivirähä_Andrus.mw
@@ -1,3 +1,12 @@
+{{Elokäük
+|pilt=Kivirähk, Andrus.IMG 0034.JPG
+|nimi=Kivirähä Andrus
+|eestikeeline_nimi=Andrus Kivirähk
+|sünnüaig=[[17. põimukuu päiv]] [[1970]]
+|sünnüpaik=[[Talliin]]
+|ammõt=kiränik
+}}
+
 '''Kivirähä Andrus''' (Andrus Kivirähk), sündünüq 1970. aastaga põimukuu 17. pääväl, om eesti kiränik. Tä lõpõt’ 1993. aastaga Tarto ülikooli aokirändüse osakunna. Andrus Kivirähk tüütäs Eesti Päävälehen, kohn tä kirotas arvamisartikliid. Tä tekk' ka raadiosaadõt „Rahva uma kaidsõq“ sõbõr Mart Juurõga üten.
 
 Andrusõ raamatut „Rehepapp ali Märdikuu“ om müüd inämb kuq 32 000 ja tuu tekk' täst parhailladsõ ao eesti kõgõ populaarsõmba kirämehe. Kivirähä Andrusõ raamaduq ommaq kirotõduq inämbäste iistläisist, eesti aoluust ja mütoloogiast, aq tä om kirotanuq ka pall'o latsiraamatit, filmistsenaariummõ ja näütemänge. Kivirähä Andrussõl om väegaq ummamuudu huumorimiil ja hüvä ettekujotus. Tä tarvitas sagõhe sõbralikku irooniat ja manopandmist.
