--- a/Kivirähä_Andrus.mw
+++ b/Kivirähä_Andrus.mw
@@ -7,7 +7,7 @@
 |ammõt=kiränik
 }}
 
-'''Kivirähä Andrus''' (Andrus Kivirähk), sündünüq 1970. aastaga põimukuu 17. pääväl, om eesti kiränik. Tä lõpõt’ 1993. aastaga Tarto ülikooli aokirändüse osakunna. Andrus Kivirähk tüütäs Eesti Päävälehen, kohn tä kirotas arvamisartikliid. Tä tekk' ka raadiosaadõt „Rahva uma kaidsõq“ sõbõr Mart Juurõga üten.
+'''Kivirähä Andrus''' (Andrus Kivirähk), sündünüq 1970. aastaga põimukuu 17. pääväl, om eesti kiränik. Tä lõpõt’ 1993. aastaga [[Tarto Ülikuul|Tarto ülikooli]] aokirändüse osakunna. Andrus Kivirähk tüütäs Eesti Päävälehen, kohn tä kirotas arvamisartikliid. Tä tege ka raadiosaadõt „Rahva uma kaidsõq“ üten sõbõr Mart Juurõga.
 
 Andrusõ raamatut „Rehepapp ali Märdikuu“ om müüd inämb kuq 32 000 ja tuu tekk' täst parhailladsõ ao eesti kõgõ populaarsõmba kirämehe. Kivirähä Andrusõ raamaduq ommaq kirotõduq inämbäste iistläisist, eesti aoluust ja mütoloogiast, aq tä om kirotanuq ka pall'o latsiraamatit, filmistsenaariummõ ja näütemänge. Kivirähä Andrussõl om väegaq ummamuudu huumorimiil ja hüvä ettekujotus. Tä tarvitas sagõhe sõbralikku irooniat ja manopandmist.
 
@@ -50,3 +50,5 @@ Tä om saanuq pall'o kirändüsavvohindo nii Eestin kuq ka vällämaal, näütü
 
 [[katõgooria:Eesti inemiseq]]
 [[katõgooria:Eesti kiräniguq]]
+
+[[et:Andrus Kivirähk]]
