--- a/1970.mw
+++ b/1970.mw
@@ -15,7 +15,7 @@
 * ...
 
 === Eesti inemiseq ===
-* ...
+* [[17. põimukuu päiv]] - [[Kivirähä Andrus]], kiränik
 
 === Muu ilma inemiseq ===
 * ... 
