*Empty MediaWiki Message*

--- a/Murakami_Haruki.mw
+++ b/Murakami_Haruki.mw
@@ -1,8 +1,8 @@
 {{Elokäük 
  | nimi = Murakami Haruki<br>村上&emsp;春樹
  | pilt = HarukiMurakami.png
- | sünnüaig = 1949
- | sünnüpaik = [[Kioto]]n
+ | sünnüaig = [[12. vahtsõaastakuu päiv]] [[1949]]
+ | sünnüpaik = [[Kioto]]
  | kuulmisaig = 
  | kuulmispaik = 
  | matmispaik = 
