*Empty MediaWiki Message*

--- a/Murakami_Haruki.mw
+++ b/Murakami_Haruki.mw
@@ -2,7 +2,7 @@
  | nimi = Murakami Haruki<br>村上&emsp;春樹
  | pilt = HarukiMurakami.png
  | sünnüaig = [[12. vahtsõaastakuu päiv]] [[1949]]
- | sünnüpaik = [[Kioto]]
+ | sünnüpaik = [[Kioto]], [[Jaapan]]
  | kuulmisaig = 
  | kuulmispaik = 
  | matmispaik = 
@@ -14,7 +14,7 @@
 
 Murakami edüsromaan „Kullõq tuulõ laulu“ ilmu 1979. aastagal. Tundsas sai Murakami 1987. aastagal ilmunuq romaaniga „Norra mõts“.
 
-Murakami Haruki reis pall'o. 1986. aastagal sõit' tää uma naasõga Itaaliahe, ildampa Kreekahe. 1987. aastagal läts' tä Inglüsmaalõ, Londonihe. 1991. aastagal läts' kiränik Ameeriga Ütisriikehe ja nakas' tüütämä sääl ülikoolihn Princetoni liinahn. 
+Murakami Haruki reis pall'o. 1986. aastagal sõit' tää uma naasõga [[Itaalia]]he, ildampa [[Kreeka]]he. 1987. aastagal läts' tä [[Inglüsmaa]]lõ, [[London]]ihe. 1991. aastagal läts' kiränik [[Ameeriga Ütisriigiq|Ameeriga Ütisriikehe]] ja nakas' tüütämä sääl ülikoolihn Princetoni liinahn. 
 
 Vahtsõaastakuul 2001. aastagal läts' kiränik tagasi Jaapanihe, kohn põraaigo eläs. Aastagal 2002 ilmu timä kümnes romaan „Kafka mereveerehn“. 2006. aastagal Murakami Haruki sai Franz Kafka nimelidse kirändüspreemia.
 
