*Empty MediaWiki Message*

--- a/Murakami_Haruki.mw
+++ b/Murakami_Haruki.mw
@@ -3,9 +3,7 @@
  | pilt = HarukiMurakami.png
  | sünnüaig = [[12. vahtsõaastakuu päiv]] [[1949]]
  | sünnüpaik = [[Kioto]], [[Jaapan]]
- | kuulmisaig = 
- | kuulmispaik = 
- | matmispaik = 
+ | ammõt = kiränik ja tõlk
  }}
 
 '''Murakami Haruki''' (Haruki Murakami, sündünüq 12. vahtsõaastakuu pääväl 1949) om [[Jaapan|jaapani]] kiränik ja tõlk. Murakami Haruki sündü Kiotohn. Timä esä oll' klassigalidsõ filoloogia oppaja.
