--- a/12._vahtsõaastakuu_päiv.mw
+++ b/12._vahtsõaastakuu_päiv.mw
@@ -21,6 +21,7 @@
 
 === Muu ilma inemiseq ===
 * [[1628]] - [[Perrault' Charles]], prantsusõ kiränik
+* [[1949]] - [[Murakami Haruki]], jaapani kiränik
 
 == Koolnuq ==
 === [[Võromaa inemiseq|Võro-]] ja [[Setomaa inemiseq|Setomaa]] inemiseq ===
