/* Muu ilma inemiseq */

--- a/1949.mw
+++ b/1949.mw
@@ -18,7 +18,7 @@
 * ...
 
 === Muu ilma inemiseq ===
-* ... 
+* [[12. vahtsõaastakuu päiv]] - [[Murakami Haruki]], jaapani kiränik
 
 == Koolnuq ==
 === [[Võromaa inemiseq|Võro-]] ja [[Setomaa inemiseq|Setomaa]] inemiseq ===
