*Empty MediaWiki Message*

--- a/Lana_Del_Rey.mw
+++ b/Lana_Del_Rey.mw
@@ -1,12 +1,10 @@
 {{Elokäük 
  | nimi = Woolridge Granti Elizabeth
  | pilt = Lana Del Ray at the Echo music award 2013.jpg
- | sünnüaig = 1986
+ | sünnüaig = [[21. piimäkuu päiv]] [[1986]]
  | sünnüpaik = [[New York|New Yorkin]]
- | kuulmisaig = 
- | kuulmispaik = 
- | matmispaik = 
- }}
+ | ammõt = laulja
+  }}
 
 '''Woolridge Granti Elizabeth''' (Elizabeth Woolridge Grant) (21. piimäkuu päiv 1986), tuntuq ku '''Lana Del Rey''', om [[Ameeriga Ütisriigiq|Ameeriga Ütisriike]] laulja ni laulusõnno kirotaja. 18-aastagadsõlt nakas' Elizabeth laulõ kirotama ja sõlmsõ uma edimädse plaadilepingu 2007. aastagal. Timä edimäne plaat „Lana Del Rey“ ilmu 2010. aastagal Internetin.
 
