--- a/Lana_Del_Rey.mw
+++ b/Lana_Del_Rey.mw
@@ -1,5 +1,6 @@
 {{Elokäük 
  | nimi = Woolridge Granti Elizabeth
+ | eestikeeline nimi = Elizabeth Woolridge Grant
  | pilt = Lana Del Ray at the Echo music award 2013.jpg
  | sünnüaig = [[21. piimäkuu päiv]] [[1986]]
  | sünnüpaik = [[New York|New Yorkin]]
