*Empty MediaWiki Message*

--- a/Reagani_Ronald.mw
+++ b/Reagani_Ronald.mw
@@ -1,5 +1,6 @@
 {{Elokäük 
- | nimi = Reagani Ronald
+ | nimi = Reagani Ronald 
+ | eestikeeline_nimi = '''Ronald Wilson Reagan
  | pilt = Official Portrait of President Reagan 1981.jpg
  | sünnüaig = 1911
  | sünnüpaik = 
@@ -7,6 +8,6 @@
  | kuulmispaik = 
  | matmispaik = 
  }}
-'''Reagani Ronald''' ('''Ronald Wilson Reagan''', sündünüq 1911-2004) oll' [[Ameeriga Ütisriigiq|Ameeriga Ütisriike]] 40. president aastagil 1981-1989 ja [[California]] 33. kubõrnõr aastagil 1967-1975.
+'''Reagani Ronald''' ('''Ronald Wilson Reagan''', 1911-2004) oll' [[Ameeriga Ütisriigiq|Ameeriga Ütisriike]] 40. president aastagil 1981-1989 ja [[California]] 33. kubõrnõr aastagil 1967-1975.
 
 [[Katõgooria:Ameeriga Ütisriike presidendiq]]
