*Empty MediaWiki Message*

--- a/Reagani_Ronald.mw
+++ b/Reagani_Ronald.mw
@@ -2,11 +2,12 @@
  | nimi = Reagani Ronald 
  | eestikeeline_nimi = '''Ronald Wilson Reagan
  | pilt = Official Portrait of President Reagan 1981.jpg
- | sünnüaig = 1911
- | sünnüpaik = 
- | kuulmisaig = 2004
- | kuulmispaik = 
+ | sünnüaig = [[6. radokuu päiv]] [[1911]]
+ | sünnüpaik = [[Tampico]], [[Illinois]], [[USA]]
+ | kuulmisaig = [[5. piimäkuu päiv]] [[2004]]
+ | kuulmispaik = [[Los Angeles]], [[California]], [[USA]]
  | matmispaik = 
+ | ammõt = poliitik
  }}
 '''Reagani Ronald''' ('''Ronald Wilson Reagan''', 1911-2004) oll' [[Ameeriga Ütisriigiq|Ameeriga Ütisriike]] 40. president aastagil 1981-1989 ja [[California]] 33. kubõrnõr aastagil 1967-1975.
 
