/* Muu ilma inemiseq */

--- a/6._radokuu_päiv.mw
+++ b/6._radokuu_päiv.mw
@@ -20,7 +20,7 @@
 * ...
 
 === Muu ilma inemiseq ===
-* ...
+* [[1911]] - [[Reagani Ronald]], [[USA]] president
 
 == Koolnuq ==
 === [[Võromaa inemiseq|Võro-]] ja [[Setomaa inemiseq|Setomaa]] inemiseq ===
