The file [[:Image:Egri_no_.jpg]] has been replaced by [[:Image:Egri_no.jpg]] by administrator [[:commons:User:Ymblanter]]: ''Robot: Removing space(s) before file extension''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Ungari.mw
+++ b/Ungari.mw
@@ -75,7 +75,7 @@ Kuning  Mátyás kuuli nii, et täl es olõq säädüsliidsi poigõ. Vahtsõs ku
 
 === Türkläisi vallutusõq 1526–1699 ===
 [[Pilt:Török pusztítás Magyarországon.JPG|250px|thumb|left|Türkläseq Ungarit rüüstämän 16. aastagasaal]]
-[[Pilt:Egri no .jpg|200px|thumb|right|Naasõq Egeri liina kaitsman]]
+[[Pilt:Egri_no.jpg|200px|thumb|right|Naasõq Egeri liina kaitsman]]
 Pääle puulttõist aastagasata sõto Ungari ja tõisi riikega saiq [[Osmannõ riik|türkläseq]] 1526. a. otsustava võido Mohácsi tapõlusõn, kon kuning [[Lajos II]] sai pagõdõn hukka. Keset poliitilist kaost valõq Ungari aadlimeheq kõrraga kats kuningat: [[Szapolyai János]]i ja [[Ferdinand I]] Habsburgõ kuningasuust.
 
 Ku türkläseq vallutiq 1541 Buda, sõs sai Ungari jaetus kolmõs tüküs ja nii jäi tuu 17. aastagasaa lõponi. Põh'aõdagujago, midä kutsuti 
