*Empty MediaWiki Message*

--- a/Reagani_Ronald.mw
+++ b/Reagani_Ronald.mw
@@ -1,6 +1,6 @@
 {{Elokäük 
  | nimi = Reagani Ronald 
- | eestikeeline_nimi = '''Ronald Wilson Reagan
+ | eestikeeline_nimi = Ronald Wilson Reagan
  | pilt = Official Portrait of President Reagan 1981.jpg
  | sünnüaig = [[6. radokuu päiv]] [[1911]]
  | sünnüpaik = [[Tampico]], [[Illinois]], [[USA]]
