--- a/Navi.mw
+++ b/Navi.mw
@@ -9,7 +9,7 @@
 |  lon_sec = 49
 }}
 
-'''Navi''' om [[külä]] [[Põlva kihlkund|Põlva kihlkunnan]] [[Võro vald|Võro vallan]], viis kilomiitret Võro liinast põh'a puul. 
+'''Navi''' om [[külä]] [[Põlva kihlkund|Põlva kihlkunnan]] [[Võro vald|Võro vallan]], viis kilomiitret Võro liinast põh'a puul. Navi külän elli 2011. aastaga rahvalugõmisõ perrä 211 inemist.
 
 ==Luudus==
 Navi külän om kolm luuduslist järve. Naist kõgõ suurõmb - [[Põrmujärv]] (vai Tsopa järv) - om õkvalt kesk muido tasast ja lakõt küllä, küländ süvän, pikän ja äkiliidsi perviga oron. Põrmujärvest lõunõ poolõ juusk uja hulga vähämbähe [[Kogõrijärv]]e ja säält edesi [[Võhandu]] jõkkõ. Kolmas järv - [[Albri järv]] (vai Mihklijärv) om tsill'okõnõ järvesilmäkene külä lõunahummoguveeren õkva suurõtii veeren. Kogõrijärve ja Albri järve vaihõl om külä kõgõ korgõmb kotus - Treimägi.
