--- a/Slovakkia.mw
+++ b/Slovakkia.mw
@@ -8,8 +8,8 @@ Kaart=Image:LocationSlovakia.png|
 Riigikiil'=[[slovaki kiil']]|
 Pääliin=[[Bratislava]]|
 Riigitüübi pää=President'|
-Riigipää=[[Ivan Gašparovič]]|
-Pääministri=[[Iveta Radičová]]|
+Riigipää=[[Andrej Kiska]]|
+Pääministri=[[Robert Fico]]|
 Suurus=49 035|
 Suurusõ perrä=126|
 Vett=—|
