*Empty MediaWiki Message*

--- a/Helsingi.mw
+++ b/Helsingi.mw
@@ -17,7 +17,28 @@
 |  kaardi_pilt = [[Pilt:Helsinki.sijainti.suomi.2009.svg|250px|Kon Helsinki Soomõn om]] 
 |  kaardiallkiri = Kon Helsingi Soomõn om}}
 
-'''Helsingi''' om [[Soomõ]] [[pääliin]] ja kõgõ suurõmb liin. Tä om Lõunõ-Soomõn [[Soomõ laht|Soomõ lahõ]] veeren.
+'''Helsingi''' om [[Soomõ]] [[pääliin]]. Taa om Lõunõ-Soomõn [[Soomõ laht|Soomõ lahe]] veeren. Helsingi om Soomõ kultuuri, valitsusõ, poliitiga ja äriilma keskus.
+
+Liina rahvaarv om umbõs 614 000 ja Helsingi liinaala rahvaarv om umbõs 1 177 000. Ta om sis rahvaarvo poolõst Soomõ kõgõ suurõmb ja Põh'amaiõ kolmandas suurõmb vald ja liinaala. Helsingi ja tä naabrivallaq ommaq kokko piaaigo 1,4 mill'ona eläniguga Helsingi piir'kunna metropoliala.
+
+== Helsingi aolugu ==
+Kuning Kustaa Vaasa asot' Helsingi Vantaa jõõ viirde Forsby vai Koskela keskao külä kotusõ pääle 12. piimäkuu 1550. Liina tsihis oll' võidõldaq majandusõn Tallinnaga, ja kuning käske Porvoo, Tammisaari, Rauma ja Ulvila liina eläniguq elämä Helsingihe. 
+
+1640 and' krahv' Pietari Brahe käsü tetäq vahtsõnõ liin mereviirde Vironniemele, kon seo ilma aigu om näütüses Senaatintori. Helsingi tähtsüs nakas' kasuma 1748, ku liina viirde ehitedi Suomenlinna kants. Helsingist sai Soomõ suurvürst'kunna pääliin 1812 ja hindäperi Soomõ pääliin 1917.
+
+Tõõsõ ilmasõa aigo Helsingi päädü mitmõhe Nõvvokogoliido suur'pommitustõ. 1952 peeti Helsingi olümpiamängoq ja 1975 Euruupa turvalisus- ja ütentüükonvõrendsi (ETÜK) tippkokkosaaminõ. Aastaga oll' 2000 Helsingi üts' Euruupa kultuuripääliinost ja 2012 Design-pääliin.
+
+== Liin ==
+Liina maaalast om mõtsa 37,2 km², parkõ 9,9 km² ja nurmõ vai niitü umbõs 8 km². Helsingi maaala maatiidüslik keskkotus om Viikin. Kõgõ korgõmb kotus Helsingin om Jakomäenkallio, mink korgus om 59,5 miitrit mere pinnast. Helsingi keskliin om maanõna pääl. Säält põh'an om Vanhankaupunginlahti, kohe Vantaa jõgi juusk. Kokko om Helsingin 317 saart.
+
+Helsingi arhitektuurin kõgo tähelepandavambaq stiilisuunaq ommaq vahtsõnõklassitsism, jugend ja funktionalism. Kõgo suurõmb osa Helsingi majost om ehitet päält aastaga 1808 tulõkahh'o. Helsingi rahvaarv (30.4.2014) om 616 042, kost soomõkeelitsit om 83,7 %, roodsikeelitsit 6,0 % ja muukeelitsit 10,2 %.
+
+== Kultuur' ==
+Helsingi üts' kõgõ tundsambist kultuurisündmüsist om suvõ lõpun algnõv Helsingi Pidonädäliq, mink kõgõ populaarsõmb sündmüs om Kunstõ üü, mink aigo keskliinan om mitmõn kotussõn avaligult kunstiteossit tiatrikunstist ja etendüisist maalikuntsiteossiniq pääväst ööniq. 
+
+Egä aastak lehekuun kõrraldõdas Kaisaniemi pargin tõõsõsugutsit kultuurõ tundsas tekev massuldaq sündmüs Maailm külän. Tuska-festivaal hainakuun om metallimuusiga kõgõ suurõmb sündmüs Põh'amaiõn.
+
+Helsingin om mitmit Soomõ tähtsit kultuuriasotuisi niguq riigi kunstimuusõum' Ateneum, seo ao kunsti muusõum' Kiasma, Soomõ Rahvusoopõr', Rahvusarhiiv ni mitmit tiatriid niguq Rahvustiatri, Helsingi liinatiatri ja Roodsi tiatri.
 
 == Pilte Helsingist ==
 <center><gallery>
@@ -34,6 +55,9 @@ File:Hietaniemi beach.jpg|Hietaniemi mereviir suvõl.
 File:Helsinki_Market.JPG|Helsinki turuplats talvõl.
 File:Helsinki Railway Station 20050604.jpg|Helsingi raudtiijaam.
 </gallery></center>
+
+== Lätteq ==
+http://fi.wikipedia.org/wiki/Helsinki
 
 [[Katõgooria:Soomõ liinaq]]
 [[Katõgooria:Õuruupa riike pääliinaq]]
