The file [[:Image:Coat_of_arms_of_the_Federated_States_of_Micronesia.svg]] has been replaced by [[:Image:Seal_of_the_Federated_States_of_Micronesia.svg]] by administrator [[:commons:User:Steinsplitter]]: ''[[commons:COM:FR|File renamed]]: [[commons:COM...

--- a/Mikroneesiä_Liidoriigiq.mw
+++ b/Mikroneesiä_Liidoriigiq.mw
@@ -2,7 +2,7 @@
 Nimi=Mikroneesiä Liidoriigiq|
 Genitiiv=Mikroneesiä Liidoriike|
 Lipp=Pilt:Flag_of_the_Federated_States_of_Micronesia.svg|
-Vapp=Pilt:Coat of arms of the Federated States of Micronesia.svg|
+Vapp=Pilt:Seal_of_the_Federated_States_of_Micronesia.svg|
 Kaart=Pilt:LocationMicronesia.png|
 Riigikiil=[[inglüse kiil]]|
 Pääliin=[[Palikir]]|
