--- a/Alakülä_(Sõmmõrpalo).mw
+++ b/Alakülä_(Sõmmõrpalo).mw
@@ -10,6 +10,7 @@
 }}
 '''Alakülä''' vai '''Järvere Alakülä''' om [[külä]] [[Urvastõ kihlkund|Urvastõ kihlkunnan]] [[Sõmmõrpalo vald|Sõmmõrpalo vallan]]. 
 
+[[Pilt:Soe Inn 10.JPG|pisi|vasakul]]
 
 ==Kaeq viil==
 
