--- a/Sõmmõrpalo_vald.mw
+++ b/Sõmmõrpalo_vald.mw
@@ -6,6 +6,12 @@
 
 Sõmmõrpalo vallan om üts [[alõvik]] - [[Sõmmõrpalo]] - ja 44 küllä: [[Alakülä (Sõmmõrpalo)|Alakülä]], [[Alapõdra]], [[Annõ mõisa]], [[Haamastõ]], [[Haava (Sõmmõrpalo)|Haava]], [[Haidaku]], [[Hansi (Sõmmõrpalo)|Hansi]], [[Hargi]], [[Heeska]], [[Hindriku]], [[Horma (Sõmmõrpalo)|Horma]], [[Hutt'a]], [[Hänike]], [[Jakapi]], [[Järvere]], [[Kaagu (Sõmmõrpalo)|Kaagu]], [[Kaapsuu]], [[Kahru]], [[Keema (Sõmmõrpalo)|Keema]], [[Kurõnurmõ]], [[Kärgula]], [[Lakovitsa]], [[Lauri (Sõmmõrpalo)|Lauri]], [[Leis'o]], [[Liinamäe (Sõmmõrpalo)|Liinamäe]], [[Liiva]], [[Lilli-Annõ]], [[Lilli]], [[Majala]], [[Murra]], [[Mustassaarõ]], [[Mustja]], [[Mäekülä]], [[Osola]], [[Pritsi]], [[Pudru]], [[Pulli (Sõmmõrpalo)|Pulli]], [[Punakülä]], [[Rauskapalu]], [[Rummi]], [[Sulbi]], [[Sõmmõrpalo külä|Sõmmõrpalo]], [[Udsali (Sõmmõrpalo)|Udsali]], [[Varõssõ]].
 
+<gallery>
+Soe kõrtsihoone.JPG|Alakülä
+Kärgula mõisa kõrvalhoone.jpg|Kärgula
+Heimtali Peetri kirik eestvaates.JPG|Lilli-Annõ
+Järvere bussipeatus.jpg|Järvere
+</gallery>
 ==Välislink==
 
 *[http://www.somerpalu.ee Sõmmõrpalo valla kodoleht]
