--- a/Lilli-Annõ.mw
+++ b/Lilli-Annõ.mw
@@ -11,7 +11,7 @@
 
 '''Lilli-Annõ''' om [[külä]] [[Urvastõ kihlkund|Urvastõ kihlkunnan]] [[Sõmmõrpalo vald|Sõmmõrpalo vallan]]. 
 
-
+[[Pilt:Heimtali Peetri kirik Sõmerpalu vallas.JPG|pisi|vasakul]]
 ==Kaeq viil==
 
 *[[Urvastõ kihlkunna küläq]]
