--- a/Jõksi.mw
+++ b/Jõksi.mw
@@ -10,5 +10,11 @@
 }}
 '''Jõksi''' om [[külä]] [[Kanepi vald|Kanepi vallan]] [[Kanepi kihlkund|Kanepi kihlkunnan]]. Külä põh'aosa kuulus [[Valgjärve vald|Valgjärve valda]]. 
 
+<gallery>
+Jõksi järv maanteelt.JPG|
+Hinni talu rehielamu.JPG|
+Hinni talu ait (2013).JPG|
+</gallery>
+
 [[Katõgooria:Kanepi kihlkunna küläq]]
 [[Katõgooria:Kanepi vald]]
