--- a/Soomõ.mw
+++ b/Soomõ.mw
@@ -9,7 +9,7 @@ Riigikiil'=[[soomõ kiil]], [[roodsi kiil]]|
 Pääliin=[[Helsinki]]|
 Riigitüübi pää=President'|
 Riigipää=[[Niinistö Sauli]]|
-Pääministri=[[Kataineni Jyrki]]|
+Pääministri=[[Alexander Stubb]]|
 Suurus=338 430,53|
 Suurusõ perrä=63|
 Vett=9,4%|
