*Empty MediaWiki Message*

--- a/U2.mw
+++ b/U2.mw
@@ -1,12 +1,12 @@
 [[Pilt:2005-11-21_U2_%40_MSG_by_ZG.JPG|thumb|right|250px|U2]]
 
-'''U2''' oll' [[Iirimaa]] [[rokk]]ansambli, miä luudi [[1976]]. aastagal [[Dublin]]in.
+'''U2''' om [[Iirimaa]] [[rokk]]ansambli, miä luudi [[1976]]. aastagal [[Dublin]]in. Alostusõst pääle mängväq-laulvaq ansmablin Bono (Hewsoni Paul David), The Edge (Evansi David Howell), Claytoni Adam ja Mulleni Larry.
 
 == Liikmõq ==
-* [[Bono]] (1976–)
-* [[The Edge]] (1976-)
-* [[Larry Mullen]] (1976-)
-* [[Adam Clayton]] (1976–)
+* [[Bono]] - laul ja kitra
+* [[The Edge]] - kitra, klahvpilliq ja laul
+* [[Larry Mullen]] - basskitra
+* [[Adam Clayton]] - trummiq
 
 == Albomiq ==
 
