*Empty MediaWiki Message*

--- a/U2.mw
+++ b/U2.mw
@@ -1,6 +1,6 @@
-[[Pilt:2005-11-21_U2_%40_MSG_by_ZG.JPG|thumb|right|250px|U2]]
+[[Pilt:2005-11-21_U2_%40_MSG_by_ZG.JPG|thumb|right|250px|U2 mängmän 2005. aastagal [[New York|New Yorgin]]. Kuralt puult: The Edge, Mulleni Larry, Bono ja Claytoni Adam.]]
 
-'''U2''' om [[Iirimaa]] [[rokk]]ansambli, miä luudi [[1976]]. aastagal [[Dublin]]in. Alostusõst pääle mängväq-laulvaq ansmablin Bono (Hewsoni Paul David), The Edge (Evansi David Howell), Claytoni Adam ja Mulleni Larry.
+'''U2''' om maailmakuulsa [[Iirimaa]] [[rokk]]ansambli, miä luudi [[1976]]. aastagal [[Dublin]]in. Alostusõst pääle mängväq-laulvaq ansmablin Bono (Hewsoni Paul David), The Edge (Evansi David Howell), Claytoni Adam ja Mulleni Larry.
 
 == Liikmõq ==
 * [[Bono]] - laul ja kitra
