--- a/Hulk.mw
+++ b/Hulk.mw
@@ -55,7 +55,7 @@ Mõnõq hulgaq ommaq matõmaatigan niivõrra tähtsäq ja näid pruugitas niivõ
 * <math>\mathbb{N}</math> - kõiki [[naturaalarv]]õ hulk, <math>\mathbb{N}</math> = {1, 2, 3, ...}.
 * <math>\mathbb{Z}</math> - kõiki [[terveharv|tervidearvõ]] hulk, <math>\mathbb{Z}</math> = {..., -2, -1, 0, 1, 2, ...}.
 * <math>\mathbb{Q}</math> - kõiki [[jagoarv]]õ hulk, <math>\mathbb{Q}</math> = {<math>\begin{matrix} \frac{a}{b} \end{matrix}</math> : ''a'',''b'' <math>\in \mathbb{Z}</math> ja ''b'' ≠ 0}. 
-* <math>\mathbb{R}</math> - kõiki [[realarv]]õ hulk. 
+* <math>\mathbb{R}</math> - kõiki [[reaalarv]]õ hulk. 
 * <math>\mathbb{C}</math> - kõiki [[kompleksarv]]õ hulk.
 
 == Hulgaarvangoq ==
