--- a/Poola.mw
+++ b/Poola.mw
@@ -10,12 +10,12 @@ Pääliin=[[Varssavi]]|
 Riigitüübi pää=President'|
 Riigipää=[[Bronisław Komorowski]]|
 Pääministri=[[Donald Tusk]]|
-Suurus=312 685|
-Suurusõ perrä=68|
+Suurus=312 679|
+Suurusõ perrä=70 (2013)|
 Vett=2,6%|
-Rahva hulk=38 635 144|
-Rahva hulga perrä=32|
-Tihehüs=123,5|
+Rahva hulk=38 502 396 (2013)|
+Rahva hulga perrä=34 (2013)|
+Tihehüs=123 (2013)|
 Hindäperi-1=|
 Hindäperi-2=[[11. märdikuu]] [[1918]]|
 Raha=[[Zlott]]|
