--- a/Brasiilia.mw
+++ b/Brasiilia.mw
@@ -26,7 +26,7 @@ Internetitunnus=[[.br]]|
 Telefonikuud'=55|
 }}
 
-'''Brasiilia Vabariik''' ([[portugali kiil|portugali keelen]] ''República Federativa do Brasil'') om [[Lõunõ-Ameeriga]] riik.
+'''Brasiilia Vabariik''' ([[portugali kiil|portugali keelen]] ''República Federativa do Brasil'') om kõgõ suurõmb [[Lõunõ-Ameeriga]] riik. 2013. aastagal elli sääl umbõs 201 mill'onat inemist. Nii suurusõ ku rahva hulga poolõst om Brasiilia maailman viies riik.
 
 == Aolugu ==
 
