--- a/24._radokuu_päiv.mw
+++ b/24._radokuu_päiv.mw
@@ -7,7 +7,7 @@
 * ...
 
 === [[Eesti]]n ===
-* [[1918]] - [[Talliin]]an kuulutõdi vällä [[Eesti|Eesti Vabariik]]
+* [[1918]] - [[Talliin]]an kuulutõdi vällä [[Eesti|Eesti Vabariik]].
 
 === Maailman ===
 * ...
